fix deprecated sass variables syntax - http://sass-lang.com/docs/yardoc/file.SASS_CHANGELOG.html#backwards_incompatibilities__must_read

--- a/webclient/app/sass/jquery-ui-1.7.2.custom-accordion.sass
+++ b/webclient/app/sass/jquery-ui-1.7.2.custom-accordion.sass
@@ -42,7 +42,7 @@
   .ui-state-active, .ui-widget-content .ui-state-active, .ui-state-default, .ui-widget-content .ui-state-default
     background: none
     border: none
-    color: !c_text
+    color: $c_text
   legend.ui-state-active, .ui-widget-content legend.ui-state-active, legend.ui-state-default, .ui-widget-content legend.ui-state-default
     font-weight: bold
     font-size: 1em
