--- a/webclient/app/sass/_borders.sass
+++ b/webclient/app/sass/_borders.sass
@@ -18,12 +18,12 @@
  *#++
 
 =round-corners-radius
-  -moz-border-radius: !round_corners_radius
-  -webkit-border-radius: !round_corners_radius
+  -moz-border-radius: $round_corners_radius
+  -webkit-border-radius: $round_corners_radius
   -moz-background-clip: border
-  -khtml-border-radius: !round_corners_radius
+  -khtml-border-radius: $round_corners_radius
   -moz-box-shadow: none
-  border-radius: !round_corners_radius
+  border-radius: $round_corners_radius
 
 =round-corners
   -moz-border-radius: 4px
@@ -42,14 +42,14 @@
   border-radius: 0px
 
 =round-corners-top-radius
-  -moz-border-radius-topleft: !round_corners_top_radius
-  -moz-border-radius-topright: !round_corners_top_radius
-  border-radius-topleft: !round_corners_top_radius
-  border-radius-topright: !round_corners_top_radius
-  -webkit-border-radius-topleft: !round_corners_top_radius
-  -webkit-border-radius-topright: !round_corners_top_radius
-  -khtml-border-radius-topleft: !round_corners_top_radius
-  -khtml-border-radius-topright: !round_corners_top_radius
+  -moz-border-radius-topleft: $round_corners_top_radius
+  -moz-border-radius-topright: $round_corners_top_radius
+  border-radius-topleft: $round_corners_top_radius
+  border-radius-topright: $round_corners_top_radius
+  -webkit-border-radius-topleft: $round_corners_top_radius
+  -webkit-border-radius-topright: $round_corners_top_radius
+  -khtml-border-radius-topleft: $round_corners_top_radius
+  -khtml-border-radius-topright: $round_corners_top_radius
   -moz-background-clip: border
 
 =round-corners-top
@@ -64,12 +64,12 @@
   -moz-background-clip: border
 
 =border-inset
-  border-color: mix(!c_black, !border_inset_base_color, 50%) mix(!c_black, !border_inset_base_color,35%) mix(!c_black, !border_inset_base_color, 20%)
+  border-color: mix($c_black, $border_inset_base_color, 50%) mix($c_black, $border_inset_base_color,35%) mix($c_black, $border_inset_base_color, 20%)
   border-style: solid
   border-width: 1px
   
 =border-outset
-  border-color: mix(!c_black, !border_outset_base_color, 20%) mix(!c_black, !border_outset_base_color,35%) mix(!c_black, !border_outset_base_color, 50%)
+  border-color: mix($c_black, $border_outset_base_color, 20%) mix($c_black, $border_outset_base_color,35%) mix($c_black, $border_outset_base_color, 50%)
   border-style: solid
   border-width: 1px
   
