--- a/webclient/app/sass/jquery-ui-1.7.2.custom-tabs.sass
+++ b/webclient/app/sass/jquery-ui-1.7.2.custom-tabs.sass
@@ -3,7 +3,7 @@
 @import _colors
 @import _borders
 
-!border_outset_base_color = !c_fieldset
+$border_outset_base_color = $c_fieldset
 .fieldset-group
   &.ui-corner-all
     +no-round-corners
@@ -11,13 +11,13 @@
   &.ui-tabs
     margin: 1em
     padding: 0px
-    color: !c_text
+    color: $c_text
     font: 1em "lsLucida Grande", "Trebuchet MS", Verdana, sans-serif
   fieldset.ui-tabs-panel
     +round-corners
     +border-outset
     margin: 0px
-    background-color: !c_fieldset
+    background-color: $c_fieldset
   .ui-widget-header
     border: none
     background: transparent
@@ -32,14 +32,14 @@
       +border-outset
       position: relative
       bottom: -1
-      color: mix(!c_fieldset, !c_text, 50%)
+      color: mix($c_fieldset, $c_text, 50%)
     .ui-state-active
-      color: !c_text
+      color: $c_text
       border-bottom-style: none
   &.ui-widget-content
     .ui-tabs-nav
       .ui-state-default, .ui-state-active
-        background-color: !c_fieldset
+        background-color: $c_fieldset
         background-image: none
         font-weight: bold
     background: transparent
