more sass deprecation fixes

--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -24,7 +24,7 @@
 
 /* == Basic setup  ========================================================
 
-$border_outset_base_color = $c_button_border
+$border_outset_base_color: $c_button_border
 =button
   +round-corners
   /*background: $c_button url(images/button-bg-rollover-gradient.png) repeat-x scroll center top
@@ -331,7 +331,7 @@ ul li
       width: 100%
       box-sizing: border-box
       -moz-box-sizing: border-box
-      float:left
+      float: left
       border-radius: 0px
       background-color: #fff
       border: 1px solid #CCCCCC
@@ -383,7 +383,7 @@ ul li
     margin: 10px 10px 0
     display: block
 
-$border_inset_base_color = $c_background
+$border_inset_base_color: $c_background
 .plugin-content
   background-color: $c_inverse_text
   /*background-color:
@@ -407,7 +407,7 @@ $border_inset_base_color = $c_background
 div.overview
   padding: 0px 0px 10px 0px
   border: 1px solid #CACACA
-  position:relative
+  position: relative
   a.controlpanel-shortcut
     float: left
     margin: 5px
@@ -425,7 +425,7 @@ div.overview
 
 /* == Form Styles =======================================================
 
-$border_outset_base_color = $c_fieldset
+$border_outset_base_color: $c_fieldset
 fieldset
   background-color: $c_fieldset
   border: none
@@ -527,7 +527,7 @@ fieldset fieldset
   float: left
   margin-left: 3px
   margin-right: 3px
-  vertical-align:text-top
+  vertical-align: text-top
 
 .bug-icon
   display: block
@@ -579,7 +579,7 @@ fieldset fieldset
 img.small-working-icon
   width: 20px
   height: 20px
-  vertical-align:text-top
+  vertical-align: text-top
   border: 0px none transparent
 
 /* ========================= Table ==========================
@@ -657,7 +657,7 @@ tr
 
 /* List accordion styles
 
-$border_outset_base_color = $c_fieldset
+$border_outset_base_color: $c_fieldset
 .list-fieldset
   /*+border-outset
   border: 2px solid #dfdfdf
