--- a/webclient/app/sass/_colors.sass
+++ b/webclient/app/sass/_colors.sass
@@ -19,45 +19,41 @@
 
 /* WebYaST colors
 
-$c_header = #ddd
-$c_text = #111111
-$c_anchor_underline = #1e90ff
-$c_error = red
-$c_white = #ffffff
-$c_gray = #888888
-$c_black = #000000
-$c_fieldset = #eee
-$c_background = #f5f5f5
-$c_button = mix($c_black,$c_fieldset,20%)
-$c_anchor = $c_text
-$c_shortcut_background = $c_background
-$c_inverse_text = $c_white
-/*$c_disabled_text = mix($c_gray, $c_text, 50%)
-$c_disabled_text = #ccc
-$c_button_border = mix($c_black, $c_button, 50%)
-$c_hower_text_shadow = mix($c_black, $c_button, 50%)
-$c_text_shadow = mix($c_white, $c_button, 50%)
-$c_input_border = mix($c_black, $c_button, 20%)
-$c_focused_input = $c_anchor_underline
-$c_content_shadow = mix($c_black, $c_background, 30%)
+$c_header: #ddd
+$c_text: #111111
+$c_anchor_underline: #1e90ff
+$c_error: red
+$c_white: #ffffff
+$c_gray: #888888
+$c_black: #000000
+$c_fieldset: #eee
+$c_background: #f5f5f5
+$c_button: mix($c_black,$c_fieldset,20%)
+$c_anchor: $c_text
+$c_shortcut_background: $c_background
+$c_inverse_text: $c_white
+/*$c_disabled_text: mix($c_gray, $c_text, 50%)
+$c_disabled_text: #ccc
+$c_button_border: mix($c_black, $c_button, 50%)
+$c_hower_text_shadow: mix($c_black, $c_button, 50%)
+$c_text_shadow: mix($c_white, $c_button, 50%)
+$c_input_border: mix($c_black, $c_button, 20%)
+$c_focused_input: $c_anchor_underline
+$c_content_shadow: mix($c_black, $c_background, 30%)
 
 /* Input elements colors
-$c_border = #999
-$c_border_focused = #1E90FF
+$c_border: #999
+$c_border_focused: #1E90FF
 
-$c_text = #333
-$c_text_hovered = #f2f2f2
-$c_active = #f2f2f2
-$c_text_disabled = #aaa
+$c_text: #333
+$c_text_hovered: #f2f2f2
+$c_active: #f2f2f2
+$c_text_disabled: #aaa
 
-$c_text_hovered_shadow = #222
+$c_text_hovered_shadow: #222
 
-$c_input_background_white = #fff
-$c_input_background_hover = #3494f2
-$c_input_active_background = #2966FF
+$c_input_background_white: #fff
+$c_input_background_hover: #3494f2
+$c_input_active_background: #2966FF
 
-$c_input_disabled = #eee
-
-
-
-
+$c_input_disabled: #eee
