--- a/plugins/example_plugin/app/views/example/index.erb
+++ b/plugins/example_plugin/app/views/example/index.erb
@@ -2,7 +2,7 @@
     <% form_tag '/example/update', :class => "webyast_form" do %>
       <div class="plugin-header">
         <div class="left">
-          <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/example.png"></label>
+          <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/example_plugin.png"></label>
           <label class="plugin-name"><%=_("Example")%></label>
         </div>
         <div class="right" >
