- fixed wrong image name

--- a/webclient/app/views/controlpanel/index.mobile.erb
+++ b/webclient/app/views/controlpanel/index.mobile.erb
@@ -28,7 +28,7 @@
     </div> -->
 
     <div id="panel" class="ui-grid-a">
-      <div class="container"><%= image_tag("/images/mobile/healthy2.png") %> System: system is healthy</div>
+      <div class="container"><%= image_tag("/images/mobile/healthy.png") %> System: system is healthy</div>
       <div class="container"><%= image_tag("/images/mobile/attention.png") %> Updates: 2 available updates</div>
     </div>
   </li>
