--- a/webclient/public/stylesheets/mobile/layout.css
+++ b/webclient/public/stylesheets/mobile/layout.css
@@ -39,7 +39,9 @@ div.fieldcontain { border:0px solid #666;  border-radius:5px;  }
 
 div.module input.ui-input-text, textarea.ui-input-text, .ui-input-search {  }
 div.module label { min-width:35%; display:inline-block; vertical-aliagn:middle;  font-size:14px; font-weight:bold; color:#888; }
+
 p.form-divider { border-bottom: 1px solid #ddd; height:1px; }
+p.form-spacer { border-bottom: 1px solid #ddd; height:1px; }
 div.clear {  clear:both; overflow:hidden; }
 
 h1.module-header {
