--- a/webclient/public/stylesheets/mobile/layout.css
+++ b/webclient/public/stylesheets/mobile/layout.css
@@ -79,3 +79,21 @@ img.inline {
   vertical-align:middle;
 }
 
+
+.service-link {
+  min-height: 32px!important;
+  padding:10px 0px 4px 45px!important;
+}
+
+a.service-link b { font-size:14px; color:#555; }
+a.service-link p.service-summary { color:#757575; }
+
+.service-icon {
+  width: 24px;
+  height: 24px;
+  left: 10px;
+  top: .9em;
+  position: absolute;
+}
+
+
